<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="3dp"
       android:orientation="vertical"
       android:paddingLeft="20dp"
       android:paddingRight="20dp"
       android:paddingTop="60dp">
      <android.support.design.widget.TextInputLayout
          android:id="@+id/login_layout_old_pwd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
         <EditText
             android:id="@+id/old_pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:hint="@string/now_password" />
      </android.support.design.widget.TextInputLayout>
      <android.support.design.widget.TextInputLayout
          android:id="@+id/login_layout_new_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <EditText
             android:id="@+id/login_new_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:hint="@string/change_new_password" />

      </android.support.design.widget.TextInputLayout>
      <android.support.design.widget.TextInputLayout
          android:id="@+id/login_layout_again_pwd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <EditText
             android:id="@+id/login_again_pwd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:hint="@string/new_password" />

      </android.support.design.widget.TextInputLayout>
      <Button android:id="@+id/btn_ok"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="确定"
          android:gravity="center"
          android:background="@color/colorPrimary"
          android:layout_marginTop="40dp"
          android:textColor="@android:color/white"/>

   </LinearLayout>


</RelativeLayout>